## 更新日志文件

    2020.03.03 go版本
               1. Travis-ci:在编译生成程序前，先进行go test测试当前平台是否有问题

    2020.03.02 go版本
               1. 更新go-epub版本到v1.0.0,感谢@ystyle提交的修改
               2. 添加生成统一isbn功能（当同时生成mobi,azw3,epub的时候才能统一；如果分开生成，isbn码是不一样的）
    
    2020.03.01 go版本
                1. cli版本:添加检查最新版本功能 update_check功能
                2. cli版本：添加生成epub功能
                3. gui版本:添加生成epub功能
                4. http-server版本：添加生成epub功能
                5. gui版本：把字体嵌入到程序当中
                6. 更新版本到 1.7.3

    2020.02.29 go版本
                1. 对代码函数命名进行规范
                2. 更新测试用命ebookdl_test.go文件
                3. 更新下载章节进度条的格式
                4. 把日志文件单独分离出来
                5. 更新PowerShell脚本，添加生成编译版本的功能

      2020.02.18 go版本
                1. 添加PowerShell脚本，用于支持在win10上编译
  
      2020.02.16 go版本
                1. ebookdownloader库：windows平台 kindlegen运行时添加隐藏窗口功能
                2. gui:运行时，隐藏ebookdownloader_cli程序启动时的黑色窗口
                3. 更新版本到1.7.2
                -----
                4. travis-ci: 对生成的程序进行upx -9压缩（Mac平台因为upx有问题，没有包含进去)

      2020.02.14 go版本
                1. http-server:添加创建任务功能和查询任务功能（使用kala Job Schedule)
                2. 对代码进行添加注释
                3. 添加新接口 GetBookBriefInfo只用于获取小说名字，作者，简介信息
                4. gui: 更新代码，修改字体的路径
                5. gui: 现在改用外部调用ebookdownloader_cli来执行下载操作，需要用到配置文件./conf/ebdl_conf.ini

      2020.02.13 go版本
                1. cli: 重新补充完成meta.json信息

      2020.02.12 go版本
                1. 添加gitee项目地址，加快国内的下载速度
                2. 生成txt：修改方法为按一章一章地往磁盘中写入文件，以降低cpu占用率
                3. cli: 添加生成json格式内容，用于把小说保存成json格式，方便线下再进行转换，方便进行二次处理
                4. 添加二级命令conv,用于转换json文件到txt,mobi,azw3格式小说

      2020.02.10 go版本
                1. 添加小说章节分割下载功能(以300章为一个下载单元)
                2. 限制并发数量，目前最大并发数量为 (300+49)*2 = 698
                3. arm版本问题：目前只能生成txt文件，因为生成mobi花费时间过于长(测试平台:Raspberry Pi 3b, cpu过于垃圾和内存太小)
                4. 更新版本到 v1.7.1
                5. 更换字体为: 文泉驿微米黑 Regular

     2020.02.02 go版本