@@ -85,6 +85,8 @@ var C = []Chapter{
 	},
 }
 
+var savePath = "./outputs/"  + testbi.Name + "-" + testbi.Author
+
 func TestBookInfo(t *testing.T) {
 	bookname := "我是谁"
 	assert.Equal(t, bookname, testbi.Name)
@@ -102,10 +104,9 @@ func TestBookInfo(t *testing.T) {
 func TestGenerateTxt(t *testing.T) {
 	testbi.ChangeVolumeState(true /* hasVolume */)
 	testbi.GenerateTxt()
-	savename := "./outputs/" + testbi.Name + "-" + testbi.Author + "/" + testbi.Name + "-" + testbi.Author + ".txt"
-
+	savename := savePath +  "/" + testbi.Name + "-" + testbi.Author + ".txt"
 	assert.True(t, true, isExist(savename))
-	//os.RemoveAll(savename)
+	os.RemoveAll(savePath)
 
 }
 
@@ -114,27 +115,26 @@ func TestGenerateMobi(t *testing.T) {
 	testbi.SetKindleEbookType(true /* isMobi */, false /* isAwz3 */)
 	testbi.GenerateISBN() //先生成ISBN码
 	testbi.GenerateMobi()
-	savename := "./outputs/" + testbi.Name + "-" + testbi.Author + "/" + testbi.Name + "-" + testbi.Author + ".mobi"
-
+	savename := savePath +  "/" + testbi.Name + "-" + testbi.Author + ".mobi"
 	assert.True(t, true, isExist(savename))
-	//os.RemoveAll(savename)
+	os.RemoveAll(savePath)
 }
 
-func TestGenerateAwz3(t *testing.T) {
+func TestGenerateAzw3(t *testing.T) {
 	testbi.ChangeVolumeState(true /* hasVolume */)
-	testbi.SetKindleEbookType(false /* isMobi */, true /* isAwz3 */)
+	testbi.SetKindleEbookType(false /* isMobi */, true /* isAzw3 */)
 	testbi.GenerateISBN() //先生成ISBN码
 	testbi.GenerateMobi()
-	savename := "./outputs/" + testbi.Name + "-" + testbi.Author + "/" + testbi.Name + "-" + testbi.Author + ".awz3"
-
+	savename := savePath +  "/" + testbi.Name + "-" + testbi.Author + ".azw3"
 	assert.True(t, true, isExist(savename))
-	//os.RemoveAll(savename)
+	os.RemoveAll(savePath)
 }
 func TestGenerateEPUB(t *testing.T) {
 	testbi.GenerateISBN() //先生成ISBN码
 	testbi.GenerateEPUB()
-	savename := "./outputs/" + testbi.Name + "-" + testbi.Author + "/" + testbi.Name + "-" + testbi.Author + ".epub"
+	savename := savePath +  "/" + testbi.Name + "-" + testbi.Author + ".epub"
 	assert.True(t, true, isExist(savename))
+	os.RemoveAll(savePath)
 }
 
 // IsExist checks whether a file or directory exists.
