@@ -2,6 +2,9 @@
 
     2020.03.03 go版本
                1. Travis-ci:在编译生成程序前，先进行go test测试当前平台是否有问题
+			   2. Travis-ci:在编译和打包的时候打印信息
+			   3. ebookdownloader:把生成mobi功能，单独成一个文件
+			   4. test: go test完成后，删除生成的测试文件和目录
 
     2020.03.02 go版本
                1. 更新go-epub版本到v1.0.0,感谢@ystyle提交的修改
